@@ -279,6 +279,21 @@ cal22.time_comp = false;
 							</SELECT>
 						    </TD>
 						</TR>
+                    				<TR>
+                        			    <TD width="1%">
+						    	<IMG src="img/print.gif" alt="">
+						    </TD>
+						    <TD width="1%" nowrap>
+                        				<B>{t}Documents:{/t}</B>
+                        			    </TD>
+                        			    <TD width="98%">
+                        				<SELECT size="1" name="docs" {tip text="Select transaction type"}>
+                                			    <OPTION value="">{t}- all -{/t}</OPTION>
+                            				    <OPTION value="documented">{t}with document{/t}</OPTION>
+                            				    <OPTION value="notdocumented">{t}without document{/t}</OPTION>
+                        				</SELECT>
+                        			    </TD>
+                    				</TR>
 					    </TABLE>
 					</TD>
 					<TD width="1%">
